--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 ---
 layout: default
 ---
-<div class="row d-md-flex d-none">
-  <div class="col-6">
-    <h2 class="text-left">
-      Sparkle Kids
-    </h2>
+<div class="team-names row d-md-flex d-none">
+  <div class="col-6 text-left">
+    Sparkle Kids
   </div>
-  <div class="col-6">
-    <h2 class="text-right">
-      Sunstone Knights
-    </h2>
+  <div class="col-6 text-right">
+    Sunstone Knights
   </div>
 </div>
 {% for post in site.posts %}
