--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@ layout: default
     </ul>
   </div>
   <div class="col-md-4 col-12">
-    <h1>Capital Intrigue</h1>
+    <h1>Ya Boiz</h1>
   </div>
 </div>
 {% for post in site.posts %}
 <div class="row">
   {% if post.team == 'Sunstone Knights' %}
   <div class="col-md-4 d-md-flex d-none">&nbsp;</div>
-  {% endif %} {% if post.team == 'Capital Intrigue' %}
+  {% endif %} {% if post.team == 'Ya Boiz' %}
   <div class="col-md-8 d-md-flex d-none">&nbsp;</div>
   {% endif %}
   <div class="col-md-4 col-12">
