--- a/index.html
+++ b/index.html
@@ -27,6 +27,29 @@ layout: default
     <h1>Ya Boiz</h1>
   </div>
 </div>
+<div class="row d-md-flex d-none">
+  <div class="col-md-4 col-12">
+    <div class="text-muted float-left character-name">Kronk</div>
+    <div class="text-muted float-right character-name">Sabine</div>
+    <img src="images/sparkle-kids.jpg" class="img-fluid party-image" />
+    <div class="text-muted float-left character-name">Evvos</div>
+    <div class="text-muted float-right character-name">Mel</div>
+  </div>
+  <div class="col-md-4 col-12">
+    <div class="text-muted float-left character-name">Rocksbee III</div>
+    <div class="text-muted float-right character-name">Reah Frostburne</div>
+    <img src="images/sunstone-knights.jpg" class="img-fluid party-image" />
+    <div class="text-muted float-left character-name">Prince Krysa</div>
+    <div class="text-muted float-right character-name">Teedo</div>
+  </div>
+  <div class="col-md-4 col-12">
+    <div class="text-muted float-left character-name">Urt</div>
+    <div class="text-muted float-right character-name">Bramble Wood</div>
+    <img src="images/ya-boiz.jpg" class="img-fluid party-image" />
+    <div class="text-muted float-left character-name">Mr. Splinter</div>
+    <div class="text-muted float-right character-name">Zam Wesell</div>
+  </div>
+</div>
 {% for post in site.posts %}
 <div class="row">
   {% if post.team == 'Sunstone Knights' %}
