--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ layout: default
     <h1>Ya Boiz</h1>
   </div>
 </div>
-<div class="row d-md-flex d-none">
+<div class="row d-none">
   <div class="col-md-4 col-12">
     <div class="text-muted float-left character-name">Kronk</div>
     <div class="text-muted float-right character-name">Sabine</div>
@@ -79,3 +79,4 @@ layout: default
   </div>
 </div>
 {% endfor %}
+{% include missions.html %}
