--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@ layout: default
   </div>
   <div class="col-md-4 col-12">
     <h1>Ya Boiz</h1>
+    <ul class="achievements party-achievements">
+      <li>Capital Intrigue</li>
+    </ul>
   </div>
 </div>
 <div class="row d-none">
