--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ layout: default
     </ul>
   </div>
   <div class="col-md-4 col-12">
-    <h1>Ya Boiz</h1>
+    <h1>Ja Boiz</h1>
     <ul class="achievements party-achievements">
       <li>Capital Intrigue</li>
     </ul>
@@ -57,7 +57,7 @@ layout: default
 <div class="row">
   {% if post.team == 'Sunstone Knights' %}
   <div class="col-md-4 d-md-flex d-none">&nbsp;</div>
-  {% endif %} {% if post.team == 'Ya Boiz' %}
+  {% endif %} {% if post.team == 'Ja Boiz' %}
   <div class="col-md-8 d-md-flex d-none">&nbsp;</div>
   {% endif %}
   <div class="col-md-4 col-12">
